test/files/parser/errors/define-assign.otest
name = "Define with no curly braces"
line = 2
character = 10
error = 'Expected "{", received "0".'

---

sine() = 0
